[package]
name = "zero_based_index"
version = "0.2.2"
authors = ["Dmitrii Demenev <demenev.dmitriy1@gmail.com>"]
edition = "2021"
rust-version = "1.59.0" # https://github.com/foresterre/cargo-msrv/issues/244
description = "Newtype offering some utility methods for zero-based indices."
documentation = "https://docs.rs/zero_based_index"
readme = "README.md"
repository = "https://github.com/JohnScience/zero_based_index"
license = "MIT OR Apache-2.0"
keywords = ["math", "indices", "mathematics"]
categories = ["mathematics"]
autobins = false
autoexamples = false
autotests = false
autobenches = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
include_display_mode_tex = { version = "0.1.4", optional = true }
const_fn = { version = "0.4.9", optional = true }

[features]
unchecked_math = []
const_inherent_unchecked_arith = ["const_fn"]
nightly = ["unchecked_math", "const_inherent_unchecked_arith"]
# such feature is needed in order to avoid compilation of nightly `include_display_mode_tex` which is
# used only for documentation generation
doc = ["include_display_mode_tex"]

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "./src/html/docs-header.html" ]
